Creation of Setting's App