@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'org.robolectric'
+
 
 android {
     compileSdkVersion 21
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 17
         versionCode 1
         versionName "1.0"
-        testApplicationId "com.fisei.visitapp.app"
+
     }
 
 
@@ -25,20 +25,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:support-v4:21.0.3'
-
-// Robolectric
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'org.robolectric:robolectric:2.4'
-}
-
-robolectric {
-    include '**/*Test.class'
-
-    // Configure max heap size of the test JVM
-    maxHeapSize = '128m'
-
-    // Configure the test JVM arguments - Does not apply to Java 8
-    jvmArgs '-XX:MaxPermSize=128m', '-XX:-UseSplitVerifier'
 }
